src/main/java/com/example/urlshortener/global/error/GlobalExceptionHandler.java
package com.example.urlshortener.global.error;

import com.example.urlshortener.global.error.exception.BusinessException;
import lombok.extern.slf4j.Slf4j;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
@Slf4j
public class GlobalExceptionHandler {

    @ExceptionHandler(BusinessException.class)
    protected ResponseEntity<ErrorResponse> handleBusinessException(BusinessException e) {
        log.error("handleBusinessException", e);
        ErrorCode errorCode = e.getErrorCode();
        final ErrorResponse response = ErrorResponse.of(errorCode);
        ResponseEntity<ErrorResponse> errorResponseResponseEntity = new ResponseEntity<>(response, HttpStatus.valueOf(errorCode.getStatus()));
        return errorResponseResponseEntity;
    }


}
